cabal-version: 2.2
name: type-containers
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/type-containers>
homepage: https://github.com/andrewthad/type-containers
bug-reports: https://github.com/andrewthad/type-containers/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/type-containers

library
  exposed-modules:
    Data.Map.Type
  hs-source-dirs: src
  build-depends:
    , base >=4.7 && <5
    , containers
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , type-containers
  default-language: Haskell2010
